pkg/api/testdata/new-gateway/accesses.yaml
apiVersion: hub.traefik.io/v1alpha1
kind: APIAccess
metadata:
  name: products
spec:
  groups:
    - suppliers
  apiCollectionSelector:
    matchLabels:
      area: stores
  apiSelector:
    matchExpressions:
      - key: product
        operator: In
        values:
          - pets
          - toys
---
apiVersion: hub.traefik.io/v1alpha1
kind: APIAccess
metadata:
  name: supply-chain
spec:
  groups:
    - supply-chain
  apiSelector:
    matchExpressions:
      - key: area
        operator: In
        values:
          - supply-chain
---
apiVersion: hub.traefik.io/v1alpha1
kind: APIAccess
metadata:
  name: admin
spec:
  groups:
    - admin
  apiSelector:
    matchExpressions: []
