pkg/api/testdata/new-gateway/ingresses.yaml
# Ingress that is not related to any Gateway.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: another-ingress
  namespace: default
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
spec:
  ingressClassName: ingress-class
  rules:
    - host: brave-lion-123.hub-traefik.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  number: 8080
