pkg/api/testdata/new-gateway/want.gateways.yaml
apiVersion: hub.traefik.io/v1alpha1
kind: APIGateway
metadata:
  name: new-gateway
  labels:
    area: stores
spec:
  apiAccesses:
    - products
    - supply-chain
    - admin
  customDomains:
    - "api.hello.example.com"
    - "api.welcome.example.com"
    - "not-verified.example.com"
status:
  version: version-1
  hubDomain: brave-lion-123.hub-traefik.io
  customDomains:
    - api.hello.example.com
    - api.welcome.example.com
  urls: "https://api.hello.example.com,https://api.welcome.example.com,https://brave-lion-123.hub-traefik.io"
  hash: "kMTuZBCWmDuE1BBEZ7XY7Q=="
