pkg/api/testdata/new-gateway/want.ingresses.yaml
# Ingress for hub domain in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-gateway-3695162296-1212442701-hub
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "admin,suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-gateway-3695162296-stripprefix@kubernetescrd,default-new-gateway-3695162296-headers@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: brave-lion-123.hub-traefik.io
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate
      hosts:
        - brave-lion-123.hub-traefik.io

---
# Ingress for custom domains in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-gateway-3695162296-1212442701
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "admin,suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-gateway-3695162296-stripprefix@kubernetescrd,default-new-gateway-3695162296-headers@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: api.hello.example.com
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
    - host: api.welcome.example.com
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate-custom-domains-3695162296
      hosts:
        - api.hello.example.com
        - api.welcome.example.com
---
# Ingress for hub domain in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-gateway-3695162296-4249197200-hub
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-gateway-3695162296-stripprefix@kubernetescrd,default-new-gateway-3695162296-headers@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: brave-lion-123.hub-traefik.io
      http:
        paths:
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate
      hosts:
        - brave-lion-123.hub-traefik.io

---
# Ingress for custom domains in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-gateway-3695162296-4249197200
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-gateway-3695162296-stripprefix@kubernetescrd,default-new-gateway-3695162296-headers@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: api.hello.example.com
      http:
        paths:
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
    - host: api.welcome.example.com
      http:
        paths:
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate-custom-domains-3695162296
      hosts:
        - api.hello.example.com
        - api.welcome.example.com

---
# Ingress for custom domains in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-gateway-3695162296-1922346371
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "admin,supply-chain"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-gateway-3695162296-stripprefix@kubernetescrd,default-new-gateway-3695162296-headers@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: api.hello.example.com
      http:
        paths:
          - path: /deliver
            pathType: Prefix
            backend:
              service:
                name: supply-chain-svc
                port:
                  number: 8080
    - host: api.welcome.example.com
      http:
        paths:
          - path: /deliver
            pathType: Prefix
            backend:
              service:
                name: supply-chain-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate-custom-domains-3695162296
      hosts:
        - api.hello.example.com
        - api.welcome.example.com

---
# Ingress for custom domains in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-gateway-3695162296-1922346371-hub
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "admin,supply-chain"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-gateway-3695162296-stripprefix@kubernetescrd,default-new-gateway-3695162296-headers@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: brave-lion-123.hub-traefik.io
      http:
        paths:
          - path: /deliver
            pathType: Prefix
            backend:
              service:
                name: supply-chain-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate
      hosts:
        - brave-lion-123.hub-traefik.io
