pkg/api/testdata/new-gateway/want.secrets.yaml
# Secret for hub domain wildcard certificate in the agent namespace.
apiVersion: core.k8s.io/v1
kind: Secret
metadata:
  name: hub-certificate
  namespace: agent-ns
  labels:
    app.kubernetes.io/managed-by: traefik-hub
type: kubernetes.io/tls
data:
  tls.crt: Y2VydA== # cert
  tls.key: cHJpdmF0ZQ== # private

---
# Secret for hub domain wildcard certificate in the default namespace.
apiVersion: core.k8s.io/v1
kind: Secret
metadata:
  name: hub-certificate
  namespace: default
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
type: kubernetes.io/tls
data:
  tls.crt: Y2VydA== # cert
  tls.key: cHJpdmF0ZQ== # private

---
# Secret for custom domains in the default namespace.
apiVersion: core.k8s.io/v1
kind: Secret
metadata:
  name: hub-certificate-custom-domains-3695162296
  namespace: default
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: new-gateway
type: kubernetes.io/tls
data:
  tls.crt: Y2VydA== # cert
  tls.key: cHJpdmF0ZQ== # private
